Made events overflow correctly

--- a/main.css
+++ b/main.css
@@ -90,15 +90,17 @@
         width:90%;
         height:85vh;
         margin: 0 2vw;
+        overflow:hidden;
+        overflow-y:auto;
       }
       #delta-box{
         border-top: 1px solid black;
       }
-      #events{
+/*      #events{
         overflow:hidden;
         overflow-y:auto;
         margin: 2vh 1vw;
-      }
+      }*/
       #house{}
       #pop{}
       #food{}
